<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.questoes.CadastroActivity" 
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textViewCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_titulo" />

    <ImageButton
        android:id="@+id/imageButtonPerfilCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/editTextNomeCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nome" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextEmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextConfirmacaoEmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_confirmacao_email_cadastro"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_senha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirmacaoSenhaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_confirmar_senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCadastrarCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar" />

    <Button
        android:id="@+id/buttonVoltarCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar" />

</LinearLayout>
