<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.questoes.PaginaQuestaoActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewFiltrosPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Button
                android:id="@+id/buttonFiltrosPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_filtros" />

            <TextView
                android:id="@+id/textViewQuestaoTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questao_titulo"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewSubDescricaoQuestaoPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_pagina_questao_sub_descricao_questao" />

            <Button
                android:id="@+id/buttonAlternativaAPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/btn_pagina_questao_alternativa_a" />

            <Button
                android:id="@+id/buttonAlternativaBPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_alternativa_b" />

            <Button
                android:id="@+id/buttonAlternativaCPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_alternativa_c" />

            <Button
                android:id="@+id/buttonAlternativaDPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_alternativa_d" />

            <Button
                android:id="@+id/buttonAlternativaEPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_alternativa_e" />

            <Button
                android:id="@+id/buttonPularPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/btn_pagina_questao_pular" />

            <Button
                android:id="@+id/buttonVoltarPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="19dp"
                android:text="@string/btn_voltar" />

            <Button
                android:id="@+id/buttonVerificarRespostaPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_verificar_resposta" />

            <Button
                android:id="@+id/buttonAvancarPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_pagina_questao_avancar"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewRespostaQuestaoPaginaQuestao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="invisible" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
