<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.questoes.PerfilUsuarioActivity" >

    <TextView
        android:id="@+id/textViewNomePerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tv_perfil_usuario_nome" />

    <TextView
        android:id="@+id/textViewEmailPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewNomePerfil"
        android:layout_marginTop="40dp"
        android:text="@string/tv_perfil_usuario_email" />

    <ImageView
        android:id="@+id/imageViewUsuarioPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewEmailPerfil"
        android:layout_alignParentRight="true"
        android:layout_marginRight="28dp"
        android:src="@drawable/abc_ab_bottom_solid_dark_holo" />

    <TextView
        android:id="@+id/textViewTotalRespondidasPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewEmailPerfil"
        android:layout_below="@+id/textViewEmailPerfil"
        android:layout_marginTop="36dp"
        android:text="@string/tv_perfil_usuario_total_respondidas" />

    <TextView
        android:id="@+id/textViewTotalErrosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTotalAcertosPerfil"
        android:layout_centerVertical="true"
        android:text="@string/tv_perfil_usuario_total_erradas" />

    <TextView
        android:id="@+id/textViewTotalAcertosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewTotalRespondidasPerfil"
        android:layout_marginTop="30dp"
        android:text="@string/tv_perfil_usuario_total_acertadas" />

    <TextView
        android:id="@+id/textViewPrecisaoPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTotalErrosPerfil"
        android:layout_below="@+id/textViewTotalErrosPerfil"
        android:layout_marginTop="46dp"
        android:text="@string/tv_perfil_usuario_precisao" />

    <Button
        android:id="@+id/buttonAlteraDadosPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_perfil_usuario_altera_dados" />

</RelativeLayout>
