<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	   <ScrollView
	       android:id="@+id/scrollView1"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content" >

	       <LinearLayout
	           android:layout_width="match_parent"
	           android:layout_height="match_parent"
	           android:orientation="vertical" >

	           <TextView
	               android:id="@+id/textViewFiltrosPaginaQuestaoHorizontal"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content" />

	           <TextView
	               android:id="@+id/textViewTituloPaginaQuestaoPg1"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/tv_pagina_questao_horizontal_pg1"
	               android:textAppearance="?android:attr/textAppearanceLarge" />

	           <TextView
	               android:id="@+id/textViewDescricaoQuestaoPaginaQuestaoHorizontal"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/questao_titulo"
	               android:textAppearance="?android:attr/textAppearanceMedium" />

	           <TextView
	               android:id="@+id/textViewSubDescricaoQuestaoPaginaQuestaoHorizontal"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:text="@string/tv_pagina_questao_sub_descricao_questao" />

	       </LinearLayout>
	   </ScrollView>

</LinearLayout>
