<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.questoes.SobreActivity" >

    <TextView
        android:id="@+id/textViewSobreNomeAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="55dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_sobre_nome" />

    <ImageView
        android:id="@+id/imageViewUsuarioPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textViewSobreVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp"
        android:layout_toLeftOf="@+id/textViewSobreNomeAutor"
        android:text="@string/tv_sobre_versao" />

    <TextView
        android:id="@+id/textViewSobreElenco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSobreNomeAutor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:text="@string/tv_sobre_elenco" />

</RelativeLayout>
